server/commextlib/commgenerator/antlr/output/commdataParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g
 *     -                            On : 2019-09-10 13:39:50
 *     -                for the parser : commdataParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "commdataParser.h"

char parserdatabuf[2048] = {0};
   
displayRecognitionErrorDataType errOldDataParser;
void displayRecognitionErrorDataParser (pANTLR3_BASE_RECOGNIZER recognizer, pANTLR3_UINT8 * tokenNames)
{
	setvbuf(stderr, parserdatabuf, _IOFBF, 1024);
	errOldDataParser(recognizer, tokenNames);
	throw exception(parserdatabuf);
}

/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pcommdataParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pcommdataParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pcommdataParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pcommdataParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   commdataParserTokenNames[19+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "CHAR",
        (pANTLR3_UINT8) "COMMENTEX",
        (pANTLR3_UINT8) "COMMENTINTERNAL",
        (pANTLR3_UINT8) "ESC_SEQ",
        (pANTLR3_UINT8) "EXPONENT",
        (pANTLR3_UINT8) "FLOAT",
        (pANTLR3_UINT8) "HEX_DIGIT",
        (pANTLR3_UINT8) "ID",
        (pANTLR3_UINT8) "INT",
        (pANTLR3_UINT8) "OCTAL_ESC",
        (pANTLR3_UINT8) "STRING",
        (pANTLR3_UINT8) "UNICODE_ESC",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "','",
        (pANTLR3_UINT8) "';'",
        (pANTLR3_UINT8) "'[CONTAINERS]'",
        (pANTLR3_UINT8) "'[END]'",
        (pANTLR3_UINT8) "'false'",
        (pANTLR3_UINT8) "'true'"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 void
	prog    (pcommdataParser ctx, CGloader* plder_);
static 
 void
	progfield    (pcommdataParser ctx);
static 
 void
	subFieldType    (pcommdataParser ctx);
static void	commdataParserFree(pcommdataParser ctx);
static void     commdataParserReset (pcommdataParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new commdataParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pcommdataParser
commdataParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return commdataParserNewSSD(instream, NULL);
}

/** \brief Create a new commdataParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pcommdataParser
commdataParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pcommdataParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pcommdataParser) ANTLR3_CALLOC(1, sizeof(commdataParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in commdataParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our commdataParser interface
     */
    ctx->prog	= prog;
    ctx->progfield	= progfield;
    ctx->subFieldType	= subFieldType;
    ctx->free			= commdataParserFree;
    ctx->reset			= commdataParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */


    	errOldDataParser = RECOGNIZER->displayRecognitionError;
    	RECOGNIZER->displayRecognitionError = displayRecognitionErrorDataParser;

    /* Install the token table
     */
    PSRSTATE->tokenNames   = commdataParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
commdataParserReset (pcommdataParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 commdataParserFree(pcommdataParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return commdataParserTokenNames;
}


    	CGloader* plder;


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_progfield_in_prog122  */
static	ANTLR3_BITWORD FOLLOW_progfield_in_prog122_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000080002) };
static  ANTLR3_BITSET_LIST FOLLOW_progfield_in_prog122	= { FOLLOW_progfield_in_prog122_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_19_in_progfield137  */
static	ANTLR3_BITWORD FOLLOW_19_in_progfield137_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000104060) };
static  ANTLR3_BITSET_LIST FOLLOW_19_in_progfield137	= { FOLLOW_19_in_progfield137_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_subFieldType_in_progfield143  */
static	ANTLR3_BITWORD FOLLOW_subFieldType_in_progfield143_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000104060) };
static  ANTLR3_BITSET_LIST FOLLOW_subFieldType_in_progfield143	= { FOLLOW_subFieldType_in_progfield143_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COMMENTEX_in_progfield149  */
static	ANTLR3_BITWORD FOLLOW_COMMENTEX_in_progfield149_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000104060) };
static  ANTLR3_BITSET_LIST FOLLOW_COMMENTEX_in_progfield149	= { FOLLOW_COMMENTEX_in_progfield149_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COMMENTINTERNAL_in_progfield159  */
static	ANTLR3_BITWORD FOLLOW_COMMENTINTERNAL_in_progfield159_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000104060) };
static  ANTLR3_BITSET_LIST FOLLOW_COMMENTINTERNAL_in_progfield159	= { FOLLOW_COMMENTINTERNAL_in_progfield159_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_20_in_progfield167  */
static	ANTLR3_BITWORD FOLLOW_20_in_progfield167_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_20_in_progfield167	= { FOLLOW_20_in_progfield167_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_STRING_in_subFieldType187  */
static	ANTLR3_BITWORD FOLLOW_STRING_in_subFieldType187_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020000) };
static  ANTLR3_BITSET_LIST FOLLOW_STRING_in_subFieldType187	= { FOLLOW_STRING_in_subFieldType187_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_17_in_subFieldType191  */
static	ANTLR3_BITWORD FOLLOW_17_in_subFieldType191_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001000) };
static  ANTLR3_BITSET_LIST FOLLOW_17_in_subFieldType191	= { FOLLOW_17_in_subFieldType191_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_INT_in_subFieldType195  */
static	ANTLR3_BITWORD FOLLOW_INT_in_subFieldType195_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020000) };
static  ANTLR3_BITSET_LIST FOLLOW_INT_in_subFieldType195	= { FOLLOW_INT_in_subFieldType195_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_17_in_subFieldType199  */
static	ANTLR3_BITWORD FOLLOW_17_in_subFieldType199_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000600000) };
static  ANTLR3_BITSET_LIST FOLLOW_17_in_subFieldType199	= { FOLLOW_17_in_subFieldType199_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_22_in_subFieldType206  */
static	ANTLR3_BITWORD FOLLOW_22_in_subFieldType206_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020000) };
static  ANTLR3_BITSET_LIST FOLLOW_22_in_subFieldType206	= { FOLLOW_22_in_subFieldType206_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_21_in_subFieldType212  */
static	ANTLR3_BITWORD FOLLOW_21_in_subFieldType212_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020000) };
static  ANTLR3_BITSET_LIST FOLLOW_21_in_subFieldType212	= { FOLLOW_21_in_subFieldType212_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_17_in_subFieldType217  */
static	ANTLR3_BITWORD FOLLOW_17_in_subFieldType217_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000004000) };
static  ANTLR3_BITSET_LIST FOLLOW_17_in_subFieldType217	= { FOLLOW_17_in_subFieldType217_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_STRING_in_subFieldType224  */
static	ANTLR3_BITWORD FOLLOW_STRING_in_subFieldType224_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020000) };
static  ANTLR3_BITSET_LIST FOLLOW_STRING_in_subFieldType224	= { FOLLOW_STRING_in_subFieldType224_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_17_in_subFieldType228  */
static	ANTLR3_BITWORD FOLLOW_17_in_subFieldType228_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000004000) };
static  ANTLR3_BITSET_LIST FOLLOW_17_in_subFieldType228	= { FOLLOW_17_in_subFieldType228_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_STRING_in_subFieldType232  */
static	ANTLR3_BITWORD FOLLOW_STRING_in_subFieldType232_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000040000) };
static  ANTLR3_BITSET_LIST FOLLOW_STRING_in_subFieldType232	= { FOLLOW_STRING_in_subFieldType232_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_18_in_subFieldType236  */
static	ANTLR3_BITWORD FOLLOW_18_in_subFieldType236_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_18_in_subFieldType236	= { FOLLOW_18_in_subFieldType236_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start prog
 * C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:66:1: prog[CGloader* plder_] : ( COMMENTEX | COMMENTINTERNAL )* ( progfield )+ ;
 */
static void
prog(pcommdataParser ctx, CGloader* plder_)
{
    /* Initialize rule variables
     */


    	if(!plder_) throw exception("commdata: No loader initialized");
    	plder = plder_;

    {
        // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:75:2: ( ( COMMENTEX | COMMENTINTERNAL )* ( progfield )+ )
        // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:76:3: ( COMMENTEX | COMMENTINTERNAL )* ( progfield )+
        {
            // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:76:3: ( COMMENTEX | COMMENTINTERNAL )*

            for (;;)
            {
                int alt1=2;
                switch ( LA(1) )
                {
                case COMMENTEX:
                case COMMENTINTERNAL:
                	{
                		alt1=1;
                	}
                    break;

                }

                switch (alt1)
                {
            	case 1:
            	    // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:
            	    {
            	        if ( ((LA(1) >= COMMENTEX) && (LA(1) <= COMMENTINTERNAL)) )
            	        {
            	            CONSUME();
            	            PERRORRECOVERY=ANTLR3_FALSE;
            	        }
            	        else
            	        {
            	            CONSTRUCTEX();
            	            EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
            	            EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
            	            EXCEPTION->expectingSet = NULL;

            	            goto ruleprogEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop1;	/* break out of the loop */
            	    break;
                }
            }
            loop1: ; /* Jump out to here if this rule does not match */


            // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:78:3: ( progfield )+
            {
                int cnt2=0;

                for (;;)
                {
                    int alt2=2;
            	switch ( LA(1) )
            	{
            	case 19:
            		{
            			alt2=1;
            		}
            	    break;

            	}

            	switch (alt2)
            	{
            	    case 1:
            	        // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:78:3: progfield
            	        {
            	            FOLLOWPUSH(FOLLOW_progfield_in_prog122);
            	            progfield(ctx);

            	            FOLLOWPOP();
            	            if  (HASEXCEPTION())
            	            {
            	                goto ruleprogEx;
            	            }


            	        }
            	        break;

            	    default:

            		if ( cnt2 >= 1 )
            		{
            		    goto loop2;
            		}
            		/* mismatchedSetEx()
            		 */
            		CONSTRUCTEX();
            		EXCEPTION->type = ANTLR3_EARLY_EXIT_EXCEPTION;
            		EXCEPTION->name = (void *)ANTLR3_EARLY_EXIT_NAME;


            		goto ruleprogEx;
            	}
            	cnt2++;
                }
                loop2: ;	/* Jump to here if this rule does not match */
            }

        }

    }

    // This is where rules clean up and exit
    //
    goto ruleprogEx; /* Prevent compiler warnings */
    ruleprogEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
            else
            {
                {


                }
            }


    return ;
}
/* $ANTLR end prog */

/**
 * $ANTLR start progfield
 * C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:81:1: progfield : ( '[CONTAINERS]' ( subFieldType | COMMENTEX | COMMENTINTERNAL )* '[END]' ) ;
 */
static void
progfield(pcommdataParser ctx)
{
    /* Initialize rule variables
     */

    {
        // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:83:2: ( ( '[CONTAINERS]' ( subFieldType | COMMENTEX | COMMENTINTERNAL )* '[END]' ) )
        // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:83:4: ( '[CONTAINERS]' ( subFieldType | COMMENTEX | COMMENTINTERNAL )* '[END]' )
        {
            // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:83:4: ( '[CONTAINERS]' ( subFieldType | COMMENTEX | COMMENTINTERNAL )* '[END]' )
            // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:83:5: '[CONTAINERS]' ( subFieldType | COMMENTEX | COMMENTINTERNAL )* '[END]'
            {
                 MATCHT(19, &FOLLOW_19_in_progfield137);
                if  (HASEXCEPTION())
                {
                    goto ruleprogfieldEx;
                }


                // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:84:4: ( subFieldType | COMMENTEX | COMMENTINTERNAL )*

                for (;;)
                {
                    int alt3=4;
                    switch ( LA(1) )
                    {
                    case STRING:
                    	{
                    		alt3=1;
                    	}
                        break;
                    case COMMENTEX:
                    	{
                    		alt3=2;
                    	}
                        break;
                    case COMMENTINTERNAL:
                    	{
                    		alt3=3;
                    	}
                        break;

                    }

                    switch (alt3)
                    {
                	case 1:
                	    // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:84:5: subFieldType
                	    {
                	        FOLLOWPUSH(FOLLOW_subFieldType_in_progfield143);
                	        subFieldType(ctx);

                	        FOLLOWPOP();
                	        if  (HASEXCEPTION())
                	        {
                	            goto ruleprogfieldEx;
                	        }


                	    }
                	    break;
                	case 2:
                	    // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:85:5: COMMENTEX
                	    {
                	         MATCHT(COMMENTEX, &FOLLOW_COMMENTEX_in_progfield149);
                	        if  (HASEXCEPTION())
                	        {
                	            goto ruleprogfieldEx;
                	        }


                	    }
                	    break;
                	case 3:
                	    // C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:86:5: COMMENTINTERNAL
                	    {
                	         MATCHT(COMMENTINTERNAL, &FOLLOW_COMMENTINTERNAL_in_progfield159);
                	        if  (HASEXCEPTION())
                	        {
                	            goto ruleprogfieldEx;
                	        }


                	    }
                	    break;

                	default:
                	    goto loop3;	/* break out of the loop */
                	    break;
                    }
                }
                loop3: ; /* Jump out to here if this rule does not match */


                 MATCHT(20, &FOLLOW_20_in_progfield167);
                if  (HASEXCEPTION())
                {
                    goto ruleprogfieldEx;
                }


            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleprogfieldEx; /* Prevent compiler warnings */
    ruleprogfieldEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end progfield */

/**
 * $ANTLR start subFieldType
 * C:\\work_git\\commonemail\\commextlib\\commgenerator\\antlr\\commdata.g:90:1: subFieldType : (a= STRING ',' b= INT ',' ( ( 'true' ) | ( 'false' ) ) ',' c= STRING ',' d= STRING ';' ) ;
 */
static void
subFieldType(pcommdataParser ctx)
{

    	gsSubFieldTypes ftypes;

    pANTLR3_COMMON_TOKEN    a;
    pANTLR3_COMMON_TOKEN    b;
    pANTLR3_COMMON_TOKEN    c;
    pANTLR3_COMMON_TOKEN    d;

    /* Initialize rule variables
     */

    a       = NULL;
    b       = NULL;
    c       = NULL;
    d       = NULL;
